--- a/form.html
+++ b/form.html
@@ -5,31 +5,37 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Submit</title>
 </head>
 
 <body>
   <main>
-    <div class="main-from">
+    <div class="main-form">
       <div class="left">
         <img src="./img/undraw_fill_form_re_cwyf.svg" alt="">
       </div>
       <div class="right">
-        <form>
-          <div class="text-area">
-            <input type="text" required>
-          <label>Username</label>
-          </div>
-          <div class="text-area">
-            <input type="password" required>
-          <label>Password</label>
-          </div>
-          <div class="pass">Forgot Password </div>
-          <input type="submit" value="Login">
-          <div class="signup-">
-            Not a member? <a href="#">SignUp</a> 
-          </div>
-        </form>
+        <div class="center">
+          <h1>Login</h1>
+          <form method="post">
+            <div class="txt_field">
+              <input type="text" required>
+              <span></span>
+              <label>Username</label>
+            </div>
+            <div class="txt_field">
+              <input type="password" required>
+              <span></span>
+              <label>Password</label>
+            </div>
+            <div class="pass">Forgot Password?</div>
+            <input type="submit" value="Login">
+            <div class="signup_link">
+              Not a member? <a href="#">Signup</a>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </main>
